<resources>
    <string name="app_name">AndroidLayout</string>

    <string name="good_morning">おはよう</string>
    <string name="good_evening">こんにちは</string>
    <string name="good_night">こんばんは</string>
    <string name="hello_world">こんにちは</string>
    <string name="good_bye">さようなら</string>
    <string name="action_settings">Settings</string>
    <string name="same_size">同じ大きさを指定</string>
    <string name="button_a">ボタンA</string>
    <string name="button_b">ボタンB</string>
    <string name="button_label">ボタン</string>
    <string name="red">red</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
    <string name="using_gravity">gravityの使い方</string>
    <string name="using_weight">比率を指定</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="using_margin">marginを指定しましょう</string>
    <string name="using_padding">paddingを指定しましょう</string>
    <string name="partial_margins">部分的に余白をを指定することもできます</string>
    <string name="margin">margin</string>
    <string name="label_a">A</string>
    <string name="label_b">B</string>
    <string name="label_c">C</string>
    <string name="label_d">D</string>
    <string name="label_e">E</string>
</resources>
