<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/using_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E0E0E0">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0091EA"
            android:textSize="30sp"
            android:layout_margin="30dp"
            android:text="@string/margin" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/using_padding"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E0E0E0">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0091EA"
            android:textSize="30sp"
            android:padding="30dp"
            android:text="@string/margin" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/partial_margins"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E0E0E0">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0091EA"
            android:textSize="30sp"
            android:paddingTop="30dp"
            android:paddingBottom="5dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/margin" />
    </LinearLayout>
</LinearLayout>
